--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -13,7 +13,7 @@
         </p>
         <ul>
             <li>Lists  <span class="dli-list"><span></span><span></span><span></span></span></li>
-            <li>Home  <span class="dli-home"></span></li>
+            <li><a href="{{url_for('home')}}">Home</a>  <span class="dli-home"></span></li>
             <li>User  <span class="dli-user-fill"></span></li>
         </ul>
     </nav>
