--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -16,8 +16,11 @@ register
         <div class="user-card">
             <ul class="list-ul">
                 <li class="list-li">
-                    <img src="{{ user.profile_image or '/static/images/default-profile.png' }}" alt="プロフィール画像"
-                        class="profile-img">
+                    {% if user.profile_img == "default-profile.png" %}
+                        <img src="static/images/default-profile.png" alt="プロフィール画像" class="profile-img">
+                    {% else %}
+                        <img src="{{ url_for('static', filename=user.profile_img) }}" alt="プロフィール画像" class="profile-img">
+                    {% endif %}
                     <a href="{{ url_for('home', user_id=user.id) }}" class="user-link">
                         {{ user.user_name }}
                     </a>
